--- a/Backend/FastAPI/.env
+++ b/Backend/FastAPI/.env
@@ -1,5 +1,27 @@
-DATA_FILE=app/data/.u94ks_userdata.bin
-EMAIL_SENDER=your_email@gmail.com
-EMAIL_PASSWORD=your_app_password
-DOMAIN_NAME=http://localhost:8000
-SECRET_KEY=my_super_secret_key_123456
+# .env.example
+# Application settings
+DEBUG=True
+ENV=development
+
+# Security settings
+SECRET_KEY=your_secret_key_here
+ENCRYPTION_KEY=your_encryption_key_here
+TOKEN_EXPIRE_MINUTES=1440
+
+# Storage settings
+DATA_DIR=app/data
+USER_DATA_FILE=userdata.enc
+
+# Email settings
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+EMAIL_FROM=noreply@yourdomain.com
+VERIFICATION_URL=http://localhost:8000/api/verify
+
+# CORS settings
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+
+# Rate limiting
+RATE_LIMIT_ENABLED=True
