--- a/Backend/FastAPI/.env
+++ b/Backend/FastAPI/.env
@@ -4,8 +4,8 @@ DEBUG=True
 ENV=development
 
 # Security settings
-SECRET_KEY=your_secret_key_here
-ENCRYPTION_KEY=your_encryption_key_here
+SECRET_KEY=tJwNXu0cozl7ikDxQvpsavlxgGEHDMz9odDEjubqyM8N6H2OdtBprPN4pV_Zv1Xsm8eI_ICwVH7VO5glvRtouA
+ENCRYPTION_KEY=gUFuvG3jQZZQ36q1EzTQdMGiSt0yCExFLu4J6VTH5xM
 TOKEN_EXPIRE_MINUTES=1440
 
 # Storage settings
@@ -15,13 +15,13 @@ USER_DATA_FILE=userdata.enc
 # Email settings
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=your_email@gmail.com
-SMTP_PASSWORD=your_app_password
-EMAIL_FROM=noreply@yourdomain.com
+SMTP_USERNAME=mohamedhms3102@gmail.com
+SMTP_PASSWORD=oofh alrx ljkj ojis
+EMAIL_FROM=mohamedhms3102@gmail.com
 VERIFICATION_URL=http://localhost:8000/api/verify
 
 # CORS settings
-CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000,http://localhost:5000
 
 # Rate limiting
 RATE_LIMIT_ENABLED=True
